feat: organize shopping and recipe favorites
